Added Product List feature

--- a/Ecom/Server/appsettings.json
+++ b/Ecom/Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(LocalDb)\\LocalDbReShop;Initial Catalog=Ecom;Integrated Security=SSPI"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
