login, logout, changepassword and authentication code

--- a/Ecom/Server/appsettings.json
+++ b/Ecom/Server/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(LocalDb)\\LocalDbReShop;Initial Catalog=Ecom;Integrated Security=SSPI"
   },
+  "AppSettings": {
+    "Token": "averysupersecretkeywhichisbulletproof"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
